# rspack-plugin-demo

./: .gitignore  Cargo.toml  README.md  package.json
.cargo/: config.toml
crates/spack_plugin_demo/: Cargo.toml  index.js  pnpm-lock.yaml
crates/spack_plugin_demo/scripts/: build.js
crates/spack_plugin_demo/src/: lib.rs
