[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors       = ["Rspack Teams"]
categories    = ["bundler", "development-tools", "web-programming"]
documentation = "https://rspack.rs/"
edition       = "2021"
homepage      = "https://rspack.rs/"
license       = "MIT"
repository    = "https://github.com/web-infra-dev/rspack"

[workspace.dependencies]
rspack_binding_builder        = "=0.2.1-alpha.0"
rspack_binding_builder_macros = "=0.2.1-alpha.0"

rspack_core  = "=0.2.1-alpha.0"
rspack_error = "=0.2.1-alpha.0"
rspack_napi  = "=0.2.1-alpha.0"
rspack_binding_build = "=0.2.1-alpha.0"

# rspack_binding_builder = { git = "https://github.com/web-infra-dev/rspack.git", tag = "v1.4.3", package = "rspack_binding_builder" }
# rspack_binding_builder_macros = { git = "https://github.com/web-infra-dev/rspack.git", tag = "v1.4.3", package = "rspack_binding_builder_macros" }

# rspack_core  = { git = "https://github.com/web-infra-dev/rspack.git", tag = "v1.4.3", package = "rspack_core" }
# rspack_error = { git = "https://github.com/web-infra-dev/rspack.git", tag = "v1.4.3", package = "rspack_error" }
# rspack_napi  = { git = "https://github.com/web-infra-dev/rspack.git", tag = "v1.4.3", package = "rspack_napi" }
# rspack_binding_build = { git = "https://github.com/web-infra-dev/rspack.git", tag = "v1.4.3", package = "rspack_binding_build" }


# rspack_binding_builder = { git = "https://github.com/web-infra-dev/rspack.git", tag = "crates@0.2.1-alpha.0", package = "rspack_binding_builder" }
# rspack_binding_builder_macros = { git = "https://github.com/web-infra-dev/rspack.git", tag = "crates@0.2.1-alpha.0", package = "rspack_binding_builder_macros" }

# rspack_core  = { git = "https://github.com/web-infra-dev/rspack.git", tag = "crates@0.2.1-alpha.0", package = "rspack_core" }
# rspack_error = { git = "https://github.com/web-infra-dev/rspack.git", tag = "crates@0.2.1-alpha.0", package = "rspack_error" }
# rspack_napi  = { git = "https://github.com/web-infra-dev/rspack.git", tag = "crates@0.2.1-alpha.0", package = "rspack_napi" }
# rspack_binding_build = { git = "https://github.com/web-infra-dev/rspack.git", tag = "crates@0.2.1-alpha.0", package = "rspack_binding_build" }


swc_core            = { version = "=30.0.2", default-features = false, features = ["parallel_rayon"] }

napi        = { version = "=3.0.0-beta.9", features = ["async", "tokio_rt", "serde-json", "anyhow", "napi7", "compat-mode"] }
napi-derive = { version = "=3.0.0-beta.9", features = ["compat-mode"] }
napi-derive-backend ={ version = "=2.0.0-beta.9"}


 


